# webcalid

./: .replit  1.py  2.py  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1732552313802.txt  Pasted--README-del-Proyecto-Dashboard-Inteligente-para-B-squeda-y-Gesti-n-de-Informaci-n-Este-proyecto-tien-1732551433576.txt  Pasted-import-streamlit-as-st-import-threading-import-time-from-utils-webrtc-import-WebRTCHandler-from-util-1732575280282.txt  admin_setup.py  api_server.py  auth.py  auth_middleware.py  cases_database.db  cases_database.py  check_db.py  config.py  create_database.py  create_database.sql  create_supervisor.py  create_supervisor.sql  database.py  database_setup.py  event_loop_setup.py  init_database.py  init_db.sql  installed_packages.txt  main.py  modify_table.py  number_generator.py  package-lock.json  pyproject.toml  recreate_database.py  recreate_database.sql  replit.nix  requirements.txt  schema.sql  smart_dashboard.db  start.sh  test_login.py  update_schema.py  update_schema.sql  update_users.py  (+5 more)
.streamlit/: config.toml
components/: auth.py  navigation.py  profile.py  service_monitor.py
datebase/: add_phone_calls.sql  add_user_roles.sql
eoir_scraper/: database.db  results.json  scrapy.cfg
pages/: 1_Number_Search.py  1_number_generator.py  1_number_search.py  2_supervisor_dashboard.py  3_phone_call.py  Case_Records_Management.py  __init__.py  dashboard.py  dashboard_app.py  number_generator.py  phone_call.py  search_results.py
scrapers/: eoir_scraper.py  pdl_scraper.py
static/: webrtc.js
(+36 files in other folders)
