[project]
name = "repl-nix-smartdashboardmanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.7",
    "aiortc>=1.9.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "numpy",
    "openpyxl>=2.1.3",
    "pandas",
    "plotly>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile",
    "streamlit>=0.12.1",
    "websockets>=14.1",
]
